--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -11,7 +11,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'eac48d97-55e9-4b3c-9b52-56cbcddf8a9b',
-        'scope':  'user/Patient.read user/Observation.read'
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
   </body>
